--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>To-Do App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To-Do List</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>To-Do List</h1>
     <div>
-        <input type="text" id="task-input" placeholder="Enter task">
+        <input type="text" id="task-input" placeholder="Enter a new task">
         <button id="add-task">Add Task</button>
     </div>
     <ul id="task-list"></ul>
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+    <!-- Your main JavaScript file -->
     <script src="main.js"></script>
 </body>
 </html>
